--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,8 @@ github:
  - jrabinowitz2/jrabinowitz2.github.io
  - jrabinowitz2/Minesweeper-RE-Challenge
  - jrabinowitz2/Subdomain-Scanner
+ - jrabinowitz2/Securifi-Almond-3-Whitepaper
+ - jrabinowitz2/LOLIOT
 
 ####Build settings
 permalink: :title/
