--- a/_config.yml
+++ b/_config.yml
@@ -55,14 +55,13 @@ technologies:
 certs:
  - name: CCENT
    association: Cisco
- - name: G Suite Administrator
-   association: Google
+
 
 education:
  - school: DePaul University
    level: B.S.
    date: Spring 2019
-   subject: Cybersecurity
+   subject: Cybersecurity (Minor: Computer Science)
    logo: depaul.png
    logo_size: 30
    courses:
