--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ skills:
  - Programming
  - Scripting
  - Automation
+ - Vulnerability Assessment
  - Exploit Development
  - Architecture Review
  - Secure Software Development
