--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ technologies:
 - Assembly, C/C++, Java, Ruby, PHP
 - Python, Bash
 - HTML, CSS, JavaScript, SQL
-- Git, Github, Gitlab
+- Git, GitHub, GitLab
 - Eclipse, IDLE, Android Studio, Xcode
 - Apache, Rails
 - Arduino, Teensy, Raspberry Pi
