--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ skills:
  - Vulnerability Assessment
  - Exploit Development
  - Architecture Review
+ - Threat Modeling
+ - Training/Education
  - Secure Software Development
  - Malware Analysis
  - Reverse-Engineeering
