--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ skills:
  - Exploit Development
  - Architecture Review
  - Threat Modeling
+ - Source Code Review
+ - Datasheet Review
  - Training/Education
  - Secure Software Development
  - Malware Analysis
