--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ technologies:
 - HTML, CSS, JavaScript, SQL
 - Git, GitHub, GitLab
 - Eclipse, IDLE, Android Studio, Xcode
-- Apache, Rails
+- Apache, Rails, .NET, Flask, jQuery, Bootstrap
 - Arduino, Teensy, Raspberry Pi
 - EAGLE, LTspice
 - SDR, GQRX, GNU Radio
