--- a/_config.yml
+++ b/_config.yml
@@ -142,6 +142,8 @@ github:
  - jrabinowitz2/Subdomain-Scanner
  - jrabinowitz2/Securifi-Almond-3-Whitepaper
  - jrabinowitz2/LOLIOT
+ - jrabinowitz2/Photomobile
+ - jrabinowitz2/E-Stop-Design
 
 ####Build settings
 permalink: :title/
