--- a/_config.yml
+++ b/_config.yml
@@ -138,6 +138,13 @@ education:
     - University Physics&#58; Thermodynamics
 
 github:
+ - jrabinowitz2/virtual-smart-remote
+ - jrabinowitz2/DIY-Flash-Reader-SOIC16
+ - jrabinowitz2/DIY-Flash-Reader-TSOP48
+ - jrabinowitz2/Introduction-to-Wireless-Hacking
+ - jrabinowitz2/Introduction-to-Hardware-Hacking
+ - jrabinowitz2/hex2dat
+ - jrabinowitz2/Intel-SSD-Test-Fixture
  - jrabinowitz2/jrabinowitz2.github.io
  - jrabinowitz2/Minesweeper-RE-Challenge
  - jrabinowitz2/Subdomain-Scanner
